# Towards-Explainable-Real-Estate

./: .gitignore  README.md  dependencies.nix  our-nixpkgs.nix  shell.nix
config/dully/: cosine-m1.dhall  cosine-m10.dhall  cosine-m20.dhall  cosine-m5.dhall  cosine-m50.dhall  default.dhall  dully.dhall  types.dhall  unweighted-l2-m1.dhall  unweighted-l2-m10.dhall  unweighted-l2-m20.dhall  unweighted-l2-m5.dhall  unweighted-l2-m50.dhall
config/evo/: ba-basis.dhall  ba-default.dhall  ba-m10.dhall  default.dhall  types.dhall
mongo/: japan_recode_sales.json
nix/: alphashape.nix  lsq-ellipse.nix  pgeocode.nix  tabnet.nix
python-db/: README.md  requirements.txt
python-db/data/: data.py  database.py  enums.py  normalize.py  wrappers.py
python-db/machine_learning/: gpu.py  helpers.py
python-db/machine_learning/deep_neural_networks/: designer_dnns.py  dnn_results.py  ea_ensemble_dnns.sh  early_stopper_for_bad_last_layer.py  get_dnn_data.py  kaggle_housing_ten_times_repeat.sh  learning_data.py  main.py  mystery_tabnet_repeat.sh  network.py  run_static_dnns.txt  scalers.py  ten_times.sh  ten_times_cbr_ea.sh  ten_times_cbr_ea_all_parallel.sh  ten_times_no_cbr.sh  ten_times_random_train_test_split.sh  ten_times_tabnet_long.sh  test_hash.py  train.py
queries/: japan-cleanv3-no-marktwert-filter.json  japan-no-duplicate-bukkens.json
r-scripts/: analysis.r  database.r  helpers.r  japan-maps.r  shell.nix
r-scripts/japan_shapefiles/: jpn_admbnda_adm0_2019.dbf  jpn_admbnda_adm0_2019.sbn  jpn_admbnda_adm0_2019.sbx  jpn_admbnda_adm0_2019.shp  jpn_admbnda_adm0_2019.shx  jpn_admbnda_adm1_2019.dbf  jpn_admbnda_adm1_2019.sbn  jpn_admbnda_adm1_2019.sbx  jpn_admbnda_adm1_2019.shp  jpn_admbnda_adm1_2019.shx  jpn_admbnda_adm2_2019.sbn  jpn_admbnda_adm2_2019.sbx  jpn_admbnda_adm2_2019.shp  jpn_admbnda_adm2_2019.shx  jpn_admbndl_ALL_2019.dbf  jpn_admbndl_ALL_2019.sbn  jpn_admbndl_ALL_2019.sbx  jpn_admbndl_ALL_2019.shp  jpn_admbndl_ALL_2019.shx
rust-db/: .gitignore  Cargo.toml  README.org  ba-start-all.sh  our-nixpkgs.nix  rustfmt.toml  shell.nix
rust-db/algorithms/: Cargo.toml
rust-db/algorithms/benches/: interval_tree.rs  knn_comparison.rs  pointlike_container.rs  sweepline.rs
rust-db/algorithms/proptest-regressions/distance_approximation/: approximation.txt  dcel.txt  mod.txt
rust-db/algorithms/proptest-regressions/distance_approximation/dcel/: mod.txt  validation.txt
rust-db/algorithms/proptest-regressions/segment_tree/: pointlike_container.txt
rust-db/algorithms/src/: calculate_environment.rs  lib.rs  sweepline.rs
rust-db/algorithms/src/distance_approximation/: approximation.rs  mod.rs
rust-db/algorithms/src/distance_approximation/dcel/: maths.rs  metrics.rs  mod.rs  validation.rs
rust-db/algorithms/src/segment_tree/: explicit.rs  implicit.rs  interval_tree.rs  mod.rs  pointlike_container.rs  range.rs  tests.rs
rust-db/common/: Cargo.toml
rust-db/common/src/: database.rs  error.rs  immo.rs  lib.rs  logging.rs  util.rs
rust-db/common/src/traits/: erased.rs  generic.rs  mod.rs
rust-db/cost_functions/: Cargo.toml
rust-db/cost_functions/proptest-regressions/: dissimilarity_cost_function.txt
rust-db/cost_functions/src/: dissimilarity_cost_function.rs  lib.rs
rust-db/dissimilarities/: Cargo.toml
rust-db/dissimilarities/proptest-regressions/: expert.txt  lp_vector_dissimilarity.txt  manhattan_vector_dissimilarity.txt
rust-db/dissimilarities/src/: dissimilarity.rs  expert.rs  filtered.rs  lib.rs  lp_vector_dissimilarity.rs
rust-db/evaluators/: Cargo.toml
rust-db/evaluators/src/: absolute.rs  deviation_output.rs  full.rs  identity.rs  kpi.rs  lib.rs  relative.rs
rust-db/evo/: Cargo.toml
rust-db/evo/proptest-regressions/weights/: bounded_float.txt
rust-db/evo/src/: evolutionary.rs  lib.rs  local_search.rs
rust-db/evo/src/fitness_functions/: mod.rs  relative_deviation.rs
rust-db/evo/src/weight/: bounded.rs  config.rs  either_weight.rs  expert_weight.rs  filter_weight.rs  lp_wap_weight.rs  mod.rs  optional_weight.rs  top_level.rs  traits.rs
rust-db/executables/: Cargo.toml
rust-db/executables/src/: calculate_U_main.rs  clean_main.rs  contraction_main.rs  dcel_main.rs  dully_main.rs  evo_main.rs  lib.rs  main.rs  offers_import_main.rs  single_block_prediction_main.rs
rust-db/normalizers/: Cargo.toml
rust-db/normalizers/proptest-regressions/: brazil.txt  hpi.txt  regression.txt
rust-db/normalizers/src/: brazil.rs  handcrafted.rs  hpi.rs  japan.rs  lib.rs  local.rs  plz.rs  regression.rs  utils.rs
rust-db/partition/: Cargo.toml
rust-db/partition/proptest-regressions/: contraction.txt
rust-db/partition/src/: are_blocks_connected.rs  contraction.rs  lib.rs  make_one_stable.rs  partition.rs
rust-db/predictions/: Cargo.toml
rust-db/predictions/proptest-regressions/: driver.txt
rust-db/predictions/src/: driver.rs  lib.rs
rust-db/predictions/src/traits/: erased.rs  generic.rs  mod.rs
rust-db/predictors/: Cargo.toml
rust-db/predictors/proptest-regressions/: learning_dully.txt  tests.txt
rust-db/predictors/src/: learning_dully.rs  lib.rs  normalizing.rs  single_block.rs  tests.rs  weighted_average.rs
rust-db/proptest-regressions/algorithms/: contraction.txt  sweepline.txt
rust-db/proptest-regressions/common/dissimilarities/: dissimilarity.txt  manhattan_vector_dissimilarity.txt
rust-db/proptest-regressions/predictions/: evaluators.txt
rust-db/proptest-regressions/predictions/predictors/: dully.txt
rust-db/scripts/: cosine-and-unweighted.sh  default-ten-times.sh  disable-filters-one-by-one.sh  enable-filters-one-by-one.sh  m.sh  old-training.sh  p-experiments.sh  replication.sh  replication_random_split.sh  train-test-performance.awk  unclean-data-median.sh  unclean-data.sh  unclean-japan.sh  unweighted-japan.sh
rust-db/test_helpers/: Cargo.toml
rust-db/test_helpers/src/: lib.rs  point.rs
