[package]
name = "normalizers"
version = "0.1.0"
authors = ["Niko <niko.hastrich@student.hpi.uni-potsdam.de>", "Ben <ben.bals@student.hpi.uni-potsdam.de>", "Sebastian <sebastian.angrick@student.hpi.uni-potsdam.de>", "Jonas <jonas.schmidt@student.hpi.uni-potsdam.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
strict = []

[dependencies]
common = {path = "../common"}
algorithms = {path = "../algorithms"}
chrono = "^0.4.19"
rayon = "^1.5"
assert_approx_eq = "^1.1.0"
serde = "^1.0"
serde_json = "^1.0"
linregress = "^0.4.0"
flexi_logger = "^0.17"
log = "^0.4"
bson = "*"
csv = "^1.1"

[dev-dependencies]
proptest = "^0.10.1"
test_helpers = {path = "../test_helpers"}
