[package]
name = "partition"
version = "0.1.0"
authors = ["Niko <niko.hastrich@student.hpi.uni-potsdam.de>", "Ben <ben.bals@student.hpi.uni-potsdam.de>", "Sebastian <sebastian.angrick@student.hpi.uni-potsdam.de>", "Jonas <jonas.schmidt@student.hpi.uni-potsdam.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
strict = []

[dependencies]
common = {path = "../common"}
algorithms = {path = "../algorithms"}
typed-index-collections = "^1.1"
itertools = "^0.10"
priority-queue = "^1.0.5"
flexi_logger = "^0.17"
log = "^0.4"
rayon = "^1.5"
derive_more = "^0.99"
serde_json = "^1.0"

[dependencies.serde]
version = "^1.0"
features = ["derive"]

[dependencies.mongodb]
version = "^1.2"
default-features = false
features = ["sync", "bson-u2i"]

[dev-dependencies]
proptest = "^0.10.1"
test_helpers = {path = "../test_helpers"}
cost_functions = {path = "../cost_functions"}
dissimilarities = {path = "../dissimilarities"}