[package]
name = "predictions"
version = "0.1.0"
authors = ["Niko <niko.hastrich@student.hpi.uni-potsdam.de>", "Ben <ben.bals@student.hpi.uni-potsdam.de>", "Sebastian <sebastian.angrick@student.hpi.uni-potsdam.de>", "Jonas <jonas.schmidt@student.hpi.uni-potsdam.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
strict = []

[dependencies]
common = {path = "../common"}
rand = "^0.8.2"
rand_xorshift = "^0.3.0"
flexi_logger = "^0.17"
log = "^0.4"

[dependencies.chrono]
version = "^0.4.19"

[dependencies.serde]
version = "^1.0"
features = ["derive"]

[dev-dependencies]
proptest = "^0.10.1"
test_helpers = {path = "../test_helpers"}
